--- a/ESHIRT/client/src/Components/Home/SwiperStyles.module.css
+++ b/ESHIRT/client/src/Components/Home/SwiperStyles.module.css
@@ -60,7 +60,7 @@
   -webkit-background-size: cover;
   background-size: cover;
   background-position: center;
-  background-image: url(https://urbanpitch.s3.us-west-1.amazonaws.com/wp-content/uploads/2019/09/03202500/t-shirt-mockup-of-a-man-with-an-attitude-in-an-urban-scenario-21681.png);
+  background-image: url(./IMG/t-shirt-mockup-of-a-man-with-an-attitude-in-an-urban-scenario-21681.png);
   background-position-y: 0px;
 }
 
