--- a/ESHIRT/client/src/Components/Landing/Landing.module.css
+++ b/ESHIRT/client/src/Components/Landing/Landing.module.css
@@ -39,7 +39,7 @@
 }
 
 .picture3{
-    background-image: url('https://images.pexels.com/photos/2471422/pexels-photo-2471422.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+    background-image: url('./IMG/pexels-photo-2471422.webp');
     height: 100vh;
 }
 
