--- a/ESHIRT/client/src/Components/Designer/ShirtModel.module.css
+++ b/ESHIRT/client/src/Components/Designer/ShirtModel.module.css
@@ -17,8 +17,8 @@
     justify-content: center;
     height: 125px;
     width: 40%;
-    border: 2px solid #ffb627;
-    border-radius: 10px;
+    /* border: 1px solid black;
+    border-radius: 10px; */
     backdrop-filter: blur(5px)
 }
 
@@ -29,7 +29,7 @@
     font-family: 'Roboto Condensed', sans-serif;
     background-color: black;
     color:white ;
-    border: 2px solid #ffb627;
+    border: 1px solid black;
     border-radius: 10px;
 }
 
