--- a/ESHIRT/client/src/Components/Designer/FinalShirt.module.css
+++ b/ESHIRT/client/src/Components/Designer/FinalShirt.module.css
@@ -14,7 +14,7 @@
     width: max-content;
     height: max-content;
     padding: 15px;
-    border: 2px solid #ffb627;
+    border: 2px solid #cfeafb;
     border-radius: 11px;
 }
 
@@ -64,7 +64,7 @@
 .uploadForm input {
     border-radius: 30px;
     width: 100%;
-    border: 2px solid #ffb627;
+    border: 2px solid #cfeafb;
     font-size: 15px;
     outline: none;
 }
