--- a/ESHIRT/client/src/Components/Designer/ShirtModel.module.css
+++ b/ESHIRT/client/src/Components/Designer/ShirtModel.module.css
@@ -17,8 +17,8 @@
     justify-content: center;
     height: 125px;
     width: 40%;
-    /* border: 1px solid black;
-    border-radius: 10px; */
+    border: 2px solid #cfeafb;
+    border-radius: 10px;
     backdrop-filter: blur(5px)
 }
 
@@ -29,7 +29,7 @@
     font-family: 'Roboto Condensed', sans-serif;
     background-color: black;
     color:white ;
-    border: 1px solid black;
+    border: 2px solid #cfeafb;
     border-radius: 10px;
 }
 
@@ -116,7 +116,7 @@
         justify-content: center;
         height: 50px;
         width: 340px;
-        border: 2px solid #ffb627;
+        border: 2px solid #cfeafb;
         border-radius: 10px;
         backdrop-filter: blur(5px)
     }
@@ -128,7 +128,7 @@
         font-family: 'Roboto Condensed', sans-serif;
         background-color: black;
         color:white ;
-        border: 2px solid #ffb627;
+        border: 2px solid #cfeafb;
         border-radius: 10px;
     }
 }
@@ -141,7 +141,7 @@
         justify-content: center;
         height: 50px;
         width: 340px;
-        border: 2px solid #ffb627;
+        border: 2px solid #cfeafb;
         border-radius: 10px;
         backdrop-filter: blur(5px)
     }
@@ -153,7 +153,7 @@
         font-family: 'Roboto Condensed', sans-serif;
         background-color: black;
         color:white ;
-        border: 2px solid #ffb627;
+        border: 2px solid #cfeafb;
         border-radius: 10px;
     }
 } */
