--- a/ESHIRT/client/src/Components/Designer/ShirtModel.module.css
+++ b/ESHIRT/client/src/Components/Designer/ShirtModel.module.css
@@ -17,9 +17,9 @@
     justify-content: center;
     height: 125px;
     width: 40%;
-    border: 2px solid #cfeafb;
+    /* border: 2px solid #cfeafb;
     border-radius: 10px;
-    backdrop-filter: blur(5px)
+    backdrop-filter: blur(5px) */
 }
 
 .title > h2 {
@@ -116,9 +116,9 @@
         justify-content: center;
         height: 50px;
         width: 340px;
-        border: 2px solid #cfeafb;
+        /* border: 2px solid #cfeafb;
         border-radius: 10px;
-        backdrop-filter: blur(5px)
+        backdrop-filter: blur(5px) */
     }
     
     .title > h2 {
